# greenlit-takehome

./: README.md  main.py  pyproject.toml
app/: crud.py  database.py  models.py  schemas.py
