[tool.poetry]
name = "simplecrud"
version = "3.12"
description = "NA"
authors = ["Chirag Suthar"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = "^2.6.1"
sqlalchemy = "^2.0.27"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
